Refactor grid filter to use campaign phase instead of load filter
